# physarum-rust

./: .gitignore  Cargo.toml  LICENSE  THIRD_PARTY_LICENSES  build_wasm.sh  cargo.toml  host_locally.sh  index.html  index.js  package.json  readme.md
public/: style.css
src/: compute.wgsl  deposit.wgsl  diffuse.wgsl  draw.wgsl  draw_new_dots.wgsl  framework.rs  lib.rs  main.rs  pipeline.rs  simulation.rs  test_runner.rs
